2005-01-10  Andras Varga

	* main.cc: factored out platform dependencies to include/platdep

2004-12-29  ------ omnetpp-3.0 released ------

2004-12-22  Andras Varga

	* opp_msgc: fix: in generated setArraySize(), avoid calling "new [0]"
	if size==0 is passed.

2004-12-19  Andras Varga

	* opp_msgc: fix: if a message was subclassed in another .msg file, base
	class fields were not visible in Tkenv [reported by Julien Cartigny]

2004-11-29  Andras Varga

	* ebnf.y: malloc.h changed to stdlib.h. Change needed for Mac OS/X 
	[patch from Michael Tuexen]

2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-19  Andras Varga

        * main.cc: implemented -h option [thanks Johnny]

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-10-04  ------ omnetpp-3.0a8 released ------

2004-09-25  Andras Varga

        * opp_msgc: added support for initializers in structs (generates
        constructor for structs now). Fields without initializer are 
        initialized to zero.

        * opp_msgc: "message" keyword is also accepted in forward declarations

2004-09-24  ------ omnetpp-3.0a7 released ------

2004-09-24  Andras Varga

        * opp_msgc: adds some Doxygen comments to the generated classes

2004-07-27  Andras Varga

        * ebnf.lex: fixed "`yytext_ptr' undeclared" error with some flex 
        versions

2004-07-22  ------ omnetpp-3.0a6 released ------

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-27  Andras Varga

        * opp_msgc: generates netPack()/netUnpack() for parallel simulation

2004-05-26  Andras Varga

        * opp_msgc: prohibit using cObject fields in structs and non-cObject
        classes (ownership issues)

2004-05-16  Andras Varga

        * opp_msgc: fixed two bugs introduced since 2.3p1

2004-05-15  ------ omnetpp-3.0a4 released ------

2004-03-22  ------ omnetpp-3.0a3 released ------

2004-03-18  Andras Varga

        * opp_msgc: if a struct or class has operator<<, it is used for the