@@ -152,7 +152,6 @@ WITH_PARSIM=yes
 # Some more OMNeT++ variables. They select the programs opp_makemake-generated
 # makefiles will use. (They get default values if commented out.)
 #
-#NEDC="$OMNETPP_BIN_DIR/nedc"
 NEDC="$OMNETPP_BIN_DIR/nedtool"
 #MSGC="$OMNETPP_BIN_DIR/opp_msgc"
 
