@@ -1865,12 +1865,12 @@ Using nedtool as NED compiler to generate C++ code:
 nedtool wireless.ned
 \end{verbatim}
 
-The resulting code is more compact and less redundant than the
+The resulting code is more compact than the
 one created by \fprog{nedtool}'s predecessor \fprog{nedc}.
 As a result, \fprog{nedtool}-created \ttt{\_n.cc}
 C++ files compile much faster.
 
-You can generate C++ code from the XML format, too:
+You can generate C++ code from the XML format as well:
 
 \begin{verbatim}
 nedtool wireless.xml
