@@ -119,10 +119,10 @@ Normally, code that sets up a network or builds the internals of a
 compound module comes from compiled NED source.  You may not like the
 restriction that your simulation program can only simulate networks
 whose setup code is linked in. No problem; your program can contain
-pieces of code similar to what is currently generated by nedc and then it can build
-any network whose components (primarily the simple modules) are linked
-in. Moreover, it is possible to write an integrated environment where
-you can put together a network using a graphical editor and right
+pieces of code similar to what is currently generated by nedtool and then 
+it can build any network whose components (primarily the simple modules) 
+are linked in. Moreover, it is possible to write an integrated environment 
+where you can put together a network using a graphical editor and right
 after that you can run it, without intervening NED compilation and
 linkage.
 
