@@ -405,7 +405,7 @@ The simulation system itself:
 
 \begin{Verbatim}[commandchars=\\\{\}]
   \tbf{omnetpp/}         {\opp} root directory
-    \tbf{bin/}           {\opp} executables (GNED, nedc, etc.)
+    \tbf{bin/}           {\opp} executables (GNED, nedtool, etc.)
     \tbf{include/}       header files for simulation models
     \tbf{lib/}           library files
     \tbf{bitmaps/}       icons that can be used in network graphics
