@@ -1,3 +1,7 @@
+2005-03-02  Andras Varga
+
+	* nedc removed (replacement is nedtool)
+
 2005-01-10  Andras Varga
 
 	* main.cc: factored out platform dependencies to include/platdep
